// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> should render default placeholder image 1`] = `
<DocumentFragment>
  <img
    alt="Cool"
    class=" no-js-SUCCESS_SRC"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render error image 1`] = `
<DocumentFragment>
  <img
    alt="Cool"
    class=" no-js-FAILURE_SRC"
    src="ERROR"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image 1`] = `
<DocumentFragment>
  <img
    alt="Cool"
    class=" no-js-SUCCESS_SRC"
    src="PLACEHOLDER"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image instead 1`] = `
<DocumentFragment>
  <img
    alt="Cool"
    class=" no-js-FAILURE_SRC"
    src="PLACEHOLDER"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render src image 1`] = `
<DocumentFragment>
  <img
    alt="Cool"
    class=" no-js-SUCCESS_SRC"
    crossorigin="anonymous"
    sizes="100vw"
    src="SUCCESS_SRC"
    srcset="cool.png"
  />
  <noscript />
</DocumentFragment>
`;
